# Glee-no-mess

./: .gitignore  BadCharacteristic.cpp  BadCharacteristic.h  CMakeLists.txt  README.md  bad_characteristic.h  club_level.cpp  club_level.h  club_level.txt  controller.cpp  controller.h  cpplint.md  level.cpp  level.h  main.cpp  main_character.cpp  main_character.h  model.cpp  model.h  mvc.h  random.h  resources.qrc  tools.h  typedefs.h  view.cpp  view.h  visitor.cpp  visitor.h
.github/workflows/: ci.yml
controller/: controller.cpp  controller.h
model/: model.cpp  model.h  settings.h
model/casino/: black_jack.cpp  black_jack.h  cards.h  pack_of_cards.cpp  pack_of_cards.h
model/guest/: guest.cpp  guest.h  guest_traits.h  visitor_traits.h
model/items/: all_items.h  ignore_first_mistake_item.cpp  ignore_first_mistake_item.h  item.cpp  item.h  items.cpp  items.h  time_item.cpp  time_item.h
model/level/: bad_characteristic.cpp  bad_characteristic.h  level.cpp  level.h
model/main_character/: main_character.cpp  main_character.h
model/tools/: mvc.h  random.cpp  random.h  typedefs.h
resources/: big_resource.qrc  items.json  main.qss  resources.qrc  start_menu.qss  style.qss
resources/casino/: cards.json
resources/club_level/: club_level.json
resources/levels/: levels.json  levels_list.json
resources/levels/Belarusian_SU/: animation_queue.json  stats.json
resources/levels/club_level/: queue_coordinates.json
resources/levels/gachi_club/: animation_queue.json  stats.json
resources/menu/: start_menu.qss
resources/settings/: complexity_settings.json  default_settings.json  easy_mod_settings.json  hard_mod_settings.json  medium_mod_settings.json  settings.qss
tools/: file_controller.cpp  file_controller.h  file_loader.cpp  file_loader.h  random.h  tools.h
view/: polyline_animation.cpp  polyline_animation.h  view.cpp  view.h
